--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Flat demo</title>
   </head>
   <body>
+    <div id='root'>
+    </div>
     <script src="/bundle.js" type="text/javascript"></script>
   </body>
 </html>
